unpackaged/main/default/objects/Inventory_Snapshot__c/Inventory_Snapshot__c.object-meta.xml
<CustomObject>
    <label>Inventory Snapshot</label>
    <nameField>
        <displayFormat>INV-SNP-{000000}</displayFormat>
        <label>Inventory Snapshot Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inventory Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>