unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Condition_Code__c.field-meta.xml
<CustomField>
    <fullName>Condition_Code__c</fullName>
    <label>Condition Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>