unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Days_In_Stock__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Stock__c</fullName>
    <label>Days in Stock</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>