unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Execution_Time__c.field-meta.xml
<CustomField>
    <fullName>Execution_Time__c</fullName>
    <label>Execution Time</label>
    <type>DateTime</type>
</CustomField>