unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Extended_Acquisition_Cost__c.field-meta.xml
<CustomField>
    <fullName>Extended_Acquisition_Cost__c</fullName>
    <label>Extended Acquisition Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>