unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Inventory_UID__c.field-meta.xml
<CustomField>
    <fullName>Inventory_UID__c</fullName>
    <label>Inventory UID</label>
    <length>128</length>
    <type>Text</type>
</CustomField>