unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Original_Inventory_Line__c.field-meta.xml
<CustomField>
    <fullName>Original_Inventory_Line__c</fullName>
    <label>Original Inventory Line</label>
    <length>255</length>
    <type>Text</type>
</CustomField>