unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Owner_Code__c.field-meta.xml
<CustomField>
    <fullName>Owner_Code__c</fullName>
    <label>Owner Code</label>
    <length>128</length>
    <type>Text</type>
</CustomField>