unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Part_Number_Description__c.field-meta.xml
<CustomField>
    <fullName>Part_Number_Description__c</fullName>
    <label>Part Number: Description</label>
    <type>TextArea</type>
</CustomField>