unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Quantity_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Quantity_Allocated__c</fullName>
    <label>Quantity Allocated</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>