unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Quantity_on_Repair__c.field-meta.xml
<CustomField>
    <fullName>Quantity_on_Repair__c</fullName>
    <label>Quantity on Repair</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>