unpackaged/main/default/objects/Inventory_Snapshot__c/fields/Repair_Cost__c.field-meta.xml
<CustomField>
    <fullName>Repair_Cost__c</fullName>
    <label>Repair Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>